[package]
name = "text-input"
version = "0.1.1"
edition = "2021"
authors = ["Ricardo7c"]
description = "Uma biblioteca simples para entrada de texto interativa no terminal"
repository = "https://github.com/Ricardo7c/text-input"
documentation = "https://github.com/Ricardo7c/text-input/blob/main/README.md"
license = "MIT"

keywords = ["input", "texto", "String", "Entrada", "text"]
categories = ["command-line-interface"]

[dependencies]
