[package]
name = "text-input"
version = "0.1.2"
edition = "2021"
authors = ["Ricardo7c"]
description = "A simple library for interactive text input in the terminal"
repository = "https://github.com/Ricardo7c/text-input"
documentation = "https://github.com/Ricardo7c/text-input/blob/main/README.md"
license = "MIT"

keywords = ["input", "texto", "String", "Entrada", "text"]
categories = ["command-line-interface"]

[dependencies]
